For GitHub, use Python 3.10.

--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.6'  # Adjust Python version as needed
+          python-version: '3.10'  # GitHub offers Python 3.10
 
       # Install dependencies from requirements.txt
       - name: Install dependencies
