--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -29,7 +29,13 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      # Run tests
+      # Run pylint
+      - name: Run pylint
+        continue-on-error: true  # Allow workflow to proceed even if pylint fails
+        run: |
+          pylint privacy_protection.py || echo "Pylint did not return 10/10"
+
+      # Run pytest
       - name: Run tests
         run: |
           export PYTHONPATH=$(pwd)
